update demo make

--- a/demo_make/lib/Makefile
+++ b/demo_make/lib/Makefile
@@ -1,6 +1,7 @@
 all: libfoo.so
 
 libfoo.so: libfoo.o
-	$(CC) -shared -o libfoo.so $^
+	$(CC) -shared -o $@ $^
 clean:
-	-rm -f *.so
+	-rm -f *.so *.o
+	@echo "removing library"
